<resources>
    <string name="app_name">Blue Archive Info</string>
    <string name="equip_info">Informasi Umum</string>
    <string name="info_1">Setiap students hanya bisa memakai 3 type equipment.
        • Students secara otomatis membuka slot equipment pertama dan akan slot yang lain ketika berada pada level tertentu.</string>
    <string name="info_2">
         •• Slot 1 ~ Level 1\n
        •• Slot 2 ~ Level 15\n
        •• Slot 3 ~ Level 35
    </string>
    <string name="info_3">
          Sekali equipment dipasang, tidak akan bisa dilepas\n
         Setiap Students memiliki satu slot dari masing-masing ke-tiga kategori berikut::\n
        ••Firepower Frame -> Hat -> Glove -> Shoe\n
        ••Endurance Frame -> Hairpin -> Badge -> Bag\n
        ••Auxiliary Frame -> Watch -> Charm -> Necklace
    </string>

    <string name="aboutus">ABOUT US</string>
    <string name="cr1">Achmad Sulton (191111062)</string>
    <string name="cr1d"> Merupakan mahasiswa jurusan TI dari STIKI MALANG. </string>
    <string name="no"> +62 852 3648 9953 </string>
    <string name="tips">Tips Awal Bermain Blue Archive</string>
    <string name="tips1">Setelah menyelesaikan tutorial, kau akan diberikan kesempatan untuk melakukan
    free 10 draw yang mana <i>guaranted</i> 3 star.
    \n\n\nPada Blue archive terdapat dua tipe karakter :
    </string>
    <string name="tips1lnj">Strikers adalah karakter yang akan kamu pakai dan lihat saat melakukan misidan gameplay,
    jika mereka semua mati maka misi failed.
    \nSedangkan Specials adalah karakter yang tidak terlihat tapi memberikan beberapa karakteristik ke Strikers.
    \n\n Team dibagi menjadi 4 Strikers dan 2 Specials <i>*Karakter diatas Strikers, dibawah Specials</i></string>
<string name="tips2">Student Compatibility</string>
    <string name="cr2">Ardhiansyah Kurniawan (191111044)</string>
    <string name="cr2id">Mahasiswa STIKI Malang Angkatan 2019</string>
    <string name="reroll">REROLLING</string>
    <string name="rerollg">Tentu saja pada game gacha kamu pastin ingin mendapatkan roll atau pull karakter yang bagus atau
    karakter yang dinginkan dan line up terbaik.
    \n\nOleh karena itu kamu bisa melakukan reroll untuk mendapatkan karakter yang bagus atau yang diinginkan sebagai
    startup
    \nBerikut Langkah-Langkah Reroll :
    \n   ✪ Jalankan Aplikasi Blue Archive.
    \n   ✪ Selesaikan Tutorial.
    \n   ✪ Selesaikan Misi pertama.
    \n   ✪ Claim freebies/reward dari mailbox.
    \n   ✪ Lakukan Pull/Gacha dengan reward.
    \n
    \nJika kamu tidak puas dengan hasil gacha kamu bisa melakukan reroll dengan mengikuti langkah-langkah berikut :
    \n
    </string>
    <string name="rerollg0">  ✪ Tap tombol menu di pojok kanan atas.</string>
    <string name="rerollg1">  ✪ Click Account</string>
    <string name="rerollg2">  ✪ Click Continue di reset account</string>
    <string name="rerollg3">  ✪ Type BlueArchive dan confirm
    \n Ulangi Langkah-Langkah-nya sampai kamu dapat apa yang kamu inginkan. Simple!</string>



</resources>