<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.aboutcr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="5dp"
            android:layout_height="383dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:background="#00CBE6" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:gravity="center"
        android:text="@string/aboutus"
        android:textColor="#000000"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/imgl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/abot1"
            android:layout_width="0dp"
            android:layout_height="179dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="56dp"
            android:layout_weight=".5"
            tools:srcCompat="@drawable/aboutim1" />

        <ImageView
            android:id="@+id/abot2"
            android:layout_width="0dp"
            android:layout_height="179dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="56dp"
            android:layout_toRightOf="@id/abot1"
            android:layout_weight=".5"
            tools:src="@drawable/aboutim2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imgln"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imgl"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-38dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/cr1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-38dp"
            android:layout_toRightOf="@+id/textView8"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/cr2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgln"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/cr1d" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/cr2id" />


    </LinearLayout>


</RelativeLayout>