<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bguide.bguide">

    <TextView
        android:id="@+id/texttl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/texttl"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/tips1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:gravity="center"
        android:padding="5dp"
        android:text="Strikers"
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_toRightOf="@id/textView9"
        android:gravity="center"
        android:padding="5dp"
        android:text="Specials"
        android:textColor="#003EF6"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/tips1lnj" />

</RelativeLayout>