<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".equipment.EqActivity">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equip_info"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Equipment"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_1"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_2"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_3"
                android:textColor="#000000" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/table_about"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/but_lay"
        android:layout_marginBottom="-44dp"
        android:gravity="center"
        android:text="N/A"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/but_lay"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:layout_alignBottom="@id/card"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="-145dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/but_hat"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hat" />

            <Button
                android:id="@+id/but_hpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hairpin" />

            <Button
                android:id="@+id/but_watch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Watch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/but_glove"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Glove" />

            <Button
                android:id="@+id/but_badge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Badge" />

            <Button
                android:id="@+id/but_charm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Charm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/but_sho"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Shoe" />

            <Button
                android:id="@+id/but_bag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bag" />

            <Button
                android:id="@+id/but_necklace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Necklace" />
        </LinearLayout>


    </LinearLayout>

    <TableLayout
        android:id="@+id/marg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/table_about"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:stretchColumns="1,2,3"
        android:textAlignment="center">

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:layout_column="1"
                android:padding="8dp"
                android:text="Tier"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_gravity="center"
                android:layout_column="1"
                android:padding="8dp"
                android:text="Nama"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_gravity="center"
                android:layout_column="1"
                android:padding="8dp"
                android:text="Map Drop"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </TableRow>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </TableLayout>

</RelativeLayout>
</ScrollView>
